FLEX BISON - Pseudolanguage Syntax Analyzer - Translator/teacParser.output
Terminals unused in grammar

   DELIMITER_DOT
   CAST_INTEGER
   CAST_REAL
   CAST_BOOL
   CAST_STRING


Grammar

    0 $accept: program $end

    1 program: start_decl

    2 start_decl: main
    3           | KEYWORD_LET let_ids type_no_str DELIMITER_SEMICOLON start_decl
    4           | KEYWORD_LET let_str_ids KEYWORD_STRING DELIMITER_SEMICOLON start_decl
    5           | KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COLON type_no_str DELIMITER_SEMICOLON start_decl
    6           | KEYWORD_CONST TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON KEYWORD_STRING DELIMITER_SEMICOLON start_decl
    7           | func start_decl

    8 main: KEYWORD_CONST KEYWORD_START DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS DELIMITER_COLON KEYWORD_INT DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines pr_end

    9 pr_end: DELIMITER_R_BRACE

   10 lines: line
   11      | line lines

   12 func: KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON type_no_str DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON
   13     | KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON KEYWORD_STRING DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON

   14 func_vars: func_var DELIMITER_R_PARENTHESIS
   15          | func_var DELIMITER_COMMA func_vars

   16 func_var: %empty
   17         | TOKEN_IDENTIFIER ident_matrix DELIMITER_COLON type_no_str
   18         | TOKEN_IDENTIFIER DELIMITER_L_BRACKET DELIMITER_R_BRACKET DELIMITER_COLON type_no_str
   19         | TOKEN_IDENTIFIER ident_matrix DELIMITER_COMMA KEYWORD_STRING
   20         | TOKEN_IDENTIFIER DELIMITER_L_BRACKET DELIMITER_R_BRACKET DELIMITER_COLON KEYWORD_STRING
   21         | TOKEN_IDENTIFIER ident_matrix DELIMITER_COMMA func_var DELIMITER_COLON type_no_str
   22         | TOKEN_IDENTIFIER DELIMITER_L_BRACKET DELIMITER_R_BRACKET DELIMITER_COMMA func_var DELIMITER_COLON type_no_str
   23         | TOKEN_IDENTIFIER ident_matrix DELIMITER_COMMA func_var DELIMITER_COLON KEYWORD_STRING
   24         | TOKEN_IDENTIFIER DELIMITER_L_BRACKET DELIMITER_R_BRACKET DELIMITER_COMMA func_var DELIMITER_COLON KEYWORD_STRING

   25 line: KEYWORD_LET let_ids type_no_str DELIMITER_SEMICOLON
   26     | KEYWORD_LET let_str_ids KEYWORD_STRING DELIMITER_SEMICOLON
   27     | TOKEN_IDENTIFIER ident_matrix DELIMITER_ASSIGN simple_expresion DELIMITER_SEMICOLON
   28     | TOKEN_IDENTIFIER ident_matrix DELIMITER_ASSIGN str_expr DELIMITER_SEMICOLON
   29     | WRITE_STRING DELIMITER_L_PARENTHESIS str_expr DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
   30     | WRITE_STRING DELIMITER_L_PARENTHESIS TOKEN_IDENTIFIER DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
   31     | WRITE_INT DELIMITER_L_PARENTHESIS simple_expresion DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
   32     | WRITE_REAL DELIMITER_L_PARENTHESIS simple_expresion DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
   33     | KEYWORD_RETURN simple_expresion DELIMITER_SEMICOLON
   34     | KEYWORD_IF if_cmd
   35     | KEYWORD_WHILE while_cmd
   36     | TOKEN_IDENTIFIER DELIMITER_L_PARENTHESIS func_call_ids DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
   37     | KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COLON type_no_str DELIMITER_SEMICOLON
   38     | KEYWORD_CONST TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON KEYWORD_STRING DELIMITER_SEMICOLON

   39 let_ids: TOKEN_IDENTIFIER DELIMITER_COLON
   40        | TOKEN_IDENTIFIER matrix DELIMITER_COLON
   41        | TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COLON
   42        | TOKEN_IDENTIFIER DELIMITER_COMMA let_ids
   43        | TOKEN_IDENTIFIER matrix DELIMITER_COMMA let_ids
   44        | TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COMMA let_ids

   45 let_str_ids: TOKEN_IDENTIFIER matrix DELIMITER_COLON
   46            | TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON
   47            | TOKEN_IDENTIFIER matrix DELIMITER_COMMA let_str_ids
   48            | TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COMMA let_str_ids

   49 matrix: DELIMITER_L_BRACKET DELIMITER_R_BRACKET
   50       | DELIMITER_L_BRACKET TOKEN_POSITIVE_INT DELIMITER_R_BRACKET

   51 ident_matrix: %empty
   52             | DELIMITER_L_BRACKET simple_expresion DELIMITER_R_BRACKET

   53 func_call_ids: %empty
   54              | simple_expresion
   55              | simple_expresion DELIMITER_COMMA func_call_ids

   56 type_no_str: KEYWORD_INT
   57            | KEYWORD_REAL
   58            | KEYWORD_BOOL
   59            | DELIMITER_L_BRACKET DELIMITER_R_BRACKET KEYWORD_INT
   60            | DELIMITER_L_BRACKET DELIMITER_R_BRACKET KEYWORD_REAL
   61            | DELIMITER_L_BRACKET DELIMITER_R_BRACKET KEYWORD_BOOL
   62            | DELIMITER_L_BRACKET DELIMITER_R_BRACKET KEYWORD_STRING

   63 simple_expresion: TOKEN_POSITIVE_INT
   64                 | TOKEN_POSITIVE_REAL
   65                 | read
   66                 | TOKEN_IDENTIFIER ident_matrix
   67                 | KEYWORD_TRUE
   68                 | KEYWORD_FALSE
   69                 | DELIMITER_L_PARENTHESIS simple_expresion DELIMITER_R_PARENTHESIS
   70                 | TOKEN_IDENTIFIER DELIMITER_L_PARENTHESIS func_call_ids DELIMITER_R_PARENTHESIS
   71                 | OPERATOR_PLUS simple_expresion
   72                 | OPERATOR_MINUS simple_expresion
   73                 | KEYWORD_NOT simple_expresion
   74                 | simple_expresion OPERATOR_PLUS simple_expresion
   75                 | simple_expresion OPERATOR_MINUS simple_expresion
   76                 | simple_expresion OPERATOR_MULTIPLY simple_expresion
   77                 | simple_expresion OPERATOR_DIVINE simple_expresion
   78                 | simple_expresion OPERATOR_MODULATE simple_expresion
   79                 | simple_expresion OPERATOR_EQUAL simple_expresion
   80                 | simple_expresion OPERATOR_NOT_EQUAL simple_expresion
   81                 | simple_expresion OPERATOR_LESS simple_expresion
   82                 | simple_expresion OPERATOR_LESS_OR_EQUAL simple_expresion
   83                 | simple_expresion KEYWORD_AND simple_expresion
   84                 | simple_expresion KEYWORD_OR simple_expresion

   85 str_expr: TOKEN_STRING_INP
   86         | read_str

   87 read: READ_INTEGER DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS
   88     | READ_REAL DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS

   89 read_str: READ_STRING DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS

   90 while_cmd: simple_expresion KEYWORD_LOOP lines KEYWORD_POOL DELIMITER_SEMICOLON

   91 if_cmd: simple_expresion KEYWORD_THEN lines KEYWORD_FI DELIMITER_SEMICOLON
   92       | simple_expresion KEYWORD_THEN lines KEYWORD_ELSE KEYWORD_IF if_cmd KEYWORD_FI DELIMITER_SEMICOLON
   93       | simple_expresion KEYWORD_THEN lines KEYWORD_ELSE expresion_iff KEYWORD_FI DELIMITER_SEMICOLON

   94 expresion_iff: expresionf
   95              | expresionf expresion_iff

   96 expresionf: KEYWORD_LET let_ids type_no_str DELIMITER_SEMICOLON
   97           | KEYWORD_LET let_str_ids KEYWORD_STRING DELIMITER_SEMICOLON
   98           | TOKEN_IDENTIFIER ident_matrix DELIMITER_ASSIGN simple_expresion DELIMITER_SEMICOLON
   99           | TOKEN_IDENTIFIER ident_matrix DELIMITER_ASSIGN str_expr DELIMITER_SEMICOLON
  100           | WRITE_STRING DELIMITER_L_PARENTHESIS str_expr DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
  101           | WRITE_STRING DELIMITER_L_PARENTHESIS TOKEN_IDENTIFIER DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
  102           | WRITE_INT DELIMITER_L_PARENTHESIS simple_expresion DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
  103           | WRITE_REAL DELIMITER_L_PARENTHESIS simple_expresion DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
  104           | KEYWORD_RETURN simple_expresion DELIMITER_SEMICOLON
  105           | KEYWORD_WHILE while_cmd
  106           | TOKEN_IDENTIFIER DELIMITER_L_PARENTHESIS func_call_ids DELIMITER_R_PARENTHESIS DELIMITER_SEMICOLON
  107           | KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COLON type_no_str DELIMITER_SEMICOLON
  108           | KEYWORD_CONST TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON KEYWORD_STRING DELIMITER_SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_POSITIVE_INT (258) 50 63
TOKEN_POSITIVE_REAL (259) 64
TOKEN_STRING_INP (260) 85
TOKEN_IDENTIFIER (261) 5 6 12 13 17 18 19 20 21 22 23 24 27 28 30 36
    37 38 39 40 41 42 43 44 45 46 47 48 66 70 98 99 101 106 107 108
KEYWORD_INT (262) 8 56 59
KEYWORD_REAL (263) 57 60
KEYWORD_BOOL (264) 58 61
KEYWORD_STRING (265) 4 6 13 19 20 23 24 26 38 62 97 108
KEYWORD_TRUE (266) 67
KEYWORD_FALSE (267) 68
KEYWORD_IF (268) 34 92
KEYWORD_ELSE (269) 92 93
KEYWORD_FI (270) 91 92 93
KEYWORD_WHILE (271) 35 105
KEYWORD_LOOP (272) 90
KEYWORD_POOL (273) 90
KEYWORD_CONST (274) 5 6 8 12 13 37 38 107 108
KEYWORD_LET (275) 3 4 25 26 96 97
KEYWORD_RETURN (276) 33 104
KEYWORD_NOT (277) 73
KEYWORD_AND (278) 83
KEYWORD_OR (279) 84
KEYWORD_START (280) 8
KEYWORD_THEN (281) 91 92 93
OPERATOR_PLUS (282) 71 74
OPERATOR_MINUS (283) 72 75
OPERATOR_MULTIPLY (284) 76
OPERATOR_DIVINE (285) 77
OPERATOR_MODULATE (286) 78
OPERATOR_EQUAL (287) 79
OPERATOR_NOT_EQUAL (288) 80
OPERATOR_LESS (289) 81
OPERATOR_LESS_OR_EQUAL (290) 82
DELIMITER_SEMICOLON (291) 3 4 5 6 12 13 25 26 27 28 29 30 31 32 33
    36 37 38 90 91 92 93 96 97 98 99 100 101 102 103 104 106 107 108
DELIMITER_L_PARENTHESIS (292) 8 12 13 29 30 31 32 36 69 70 87 88 89
    100 101 102 103 106
DELIMITER_R_PARENTHESIS (293) 8 14 29 30 31 32 36 69 70 87 88 89 100
    101 102 103 106
DELIMITER_COMMA (294) 15 19 21 22 23 24 42 43 44 47 48 55
DELIMITER_L_BRACKET (295) 18 20 22 24 49 50 52 59 60 61 62
DELIMITER_R_BRACKET (296) 18 20 22 24 49 50 52 59 60 61 62
DELIMITER_L_BRACE (297) 8 12 13
DELIMITER_R_BRACE (298) 9 12 13
DELIMITER_COLON (299) 5 6 8 12 13 17 18 20 21 22 23 24 37 38 39 40
    41 45 46 107 108
DELIMITER_DOT (300)
DELIMITER_ASSIGN (301) 5 6 8 12 13 27 28 37 38 41 44 46 48 98 99 107
    108
DELIMITER_RETURN_ASSIGN (302) 8 12 13
CAST_INTEGER (303)
CAST_REAL (304)
CAST_BOOL (305)
CAST_STRING (306)
READ_STRING (307) 89
READ_INTEGER (308) 87
READ_REAL (309) 88
WRITE_STRING (310) 29 30 100 101
WRITE_INT (311) 31 102
WRITE_REAL (312) 32 103
R_PLUS (313)
R_MINUS (314)
L_PLUS (315)
L_MINUS (316)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 1, on right: 0
start_decl (64)
    on left: 2 3 4 5 6 7, on right: 1 3 4 5 6 7
main (65)
    on left: 8, on right: 2
pr_end (66)
    on left: 9, on right: 8
lines (67)
    on left: 10 11, on right: 8 11 12 13 90 91 92 93
func (68)
    on left: 12 13, on right: 7
func_vars (69)
    on left: 14 15, on right: 12 13 15
func_var (70)
    on left: 16 17 18 19 20 21 22 23 24, on right: 14 15 21 22 23 24
line (71)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38, on right: 10
    11
let_ids (72)
    on left: 39 40 41 42 43 44, on right: 3 25 42 43 44 96
let_str_ids (73)
    on left: 45 46 47 48, on right: 4 26 47 48 97
matrix (74)
    on left: 49 50, on right: 6 38 40 43 45 46 47 48 108
ident_matrix (75)
    on left: 51 52, on right: 17 19 21 23 27 28 66 98 99
func_call_ids (76)
    on left: 53 54 55, on right: 36 55 70 106
type_no_str (77)
    on left: 56 57 58 59 60 61 62, on right: 3 5 12 17 18 21 22 25
    37 96 107
simple_expresion (78)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83 84, on right: 5 27 31 32 33 37 41 44 52 54 55 69 71 72
    73 74 75 76 77 78 79 80 81 82 83 84 90 91 92 93 98 102 103 104
    107
str_expr (79)
    on left: 85 86, on right: 6 28 29 38 46 48 99 100 108
read (80)
    on left: 87 88, on right: 65
read_str (81)
    on left: 89, on right: 86
while_cmd (82)
    on left: 90, on right: 35 105
if_cmd (83)
    on left: 91 92 93, on right: 34 92
expresion_iff (84)
    on left: 94 95, on right: 93 95
expresionf (85)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107 108, on right:
    94 95


State 0

    0 $accept: . program $end
    1 program: . start_decl
    2 start_decl: . main
    3           | . KEYWORD_LET let_ids type_no_str DELIMITER_SEMICOLON start_decl
    4           | . KEYWORD_LET let_str_ids KEYWORD_STRING DELIMITER_SEMICOLON start_decl
    5           | . KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COLON type_no_str DELIMITER_SEMICOLON start_decl
    6           | . KEYWORD_CONST TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON KEYWORD_STRING DELIMITER_SEMICOLON start_decl
    7           | . func start_decl
    8 main: . KEYWORD_CONST KEYWORD_START DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS DELIMITER_COLON KEYWORD_INT DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines pr_end
   12 func: . KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON type_no_str DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON
   13     | . KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON KEYWORD_STRING DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON

    KEYWORD_CONST  shift, and go to state 1
    KEYWORD_LET    shift, and go to state 2

    program     go to state 3
    start_decl  go to state 4
    main        go to state 5
    func        go to state 6


State 1

    5 start_decl: KEYWORD_CONST . TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COLON type_no_str DELIMITER_SEMICOLON start_decl
    6           | KEYWORD_CONST . TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON KEYWORD_STRING DELIMITER_SEMICOLON start_decl
    8 main: KEYWORD_CONST . KEYWORD_START DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS DELIMITER_COLON KEYWORD_INT DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines pr_end
   12 func: KEYWORD_CONST . TOKEN_IDENTIFIER DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON type_no_str DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON
   13     | KEYWORD_CONST . TOKEN_IDENTIFIER DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON KEYWORD_STRING DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 7
    KEYWORD_START     shift, and go to state 8


State 2

    3 start_decl: KEYWORD_LET . let_ids type_no_str DELIMITER_SEMICOLON start_decl
    4           | KEYWORD_LET . let_str_ids KEYWORD_STRING DELIMITER_SEMICOLON start_decl
   39 let_ids: . TOKEN_IDENTIFIER DELIMITER_COLON
   40        | . TOKEN_IDENTIFIER matrix DELIMITER_COLON
   41        | . TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COLON
   42        | . TOKEN_IDENTIFIER DELIMITER_COMMA let_ids
   43        | . TOKEN_IDENTIFIER matrix DELIMITER_COMMA let_ids
   44        | . TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COMMA let_ids
   45 let_str_ids: . TOKEN_IDENTIFIER matrix DELIMITER_COLON
   46            | . TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON
   47            | . TOKEN_IDENTIFIER matrix DELIMITER_COMMA let_str_ids
   48            | . TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COMMA let_str_ids

    TOKEN_IDENTIFIER  shift, and go to state 9

    let_ids      go to state 10
    let_str_ids  go to state 11


State 3

    0 $accept: program . $end

    $end  shift, and go to state 12


State 4

    1 program: start_decl .

    $default  reduce using rule 1 (program)


State 5

    2 start_decl: main .

    $default  reduce using rule 2 (start_decl)


State 6

    2 start_decl: . main
    3           | . KEYWORD_LET let_ids type_no_str DELIMITER_SEMICOLON start_decl
    4           | . KEYWORD_LET let_str_ids KEYWORD_STRING DELIMITER_SEMICOLON start_decl
    5           | . KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COLON type_no_str DELIMITER_SEMICOLON start_decl
    6           | . KEYWORD_CONST TOKEN_IDENTIFIER matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON KEYWORD_STRING DELIMITER_SEMICOLON start_decl
    7           | . func start_decl
    7           | func . start_decl
    8 main: . KEYWORD_CONST KEYWORD_START DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS DELIMITER_COLON KEYWORD_INT DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines pr_end
   12 func: . KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON type_no_str DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON
   13     | . KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON KEYWORD_STRING DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON

    KEYWORD_CONST  shift, and go to state 1
    KEYWORD_LET    shift, and go to state 2

    start_decl  go to state 13
    main        go to state 5
    func        go to state 6


State 7

    5 start_decl: KEYWORD_CONST TOKEN_IDENTIFIER . DELIMITER_ASSIGN simple_expresion DELIMITER_COLON type_no_str DELIMITER_SEMICOLON start_decl
    6           | KEYWORD_CONST TOKEN_IDENTIFIER . matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON KEYWORD_STRING DELIMITER_SEMICOLON start_decl
   12 func: KEYWORD_CONST TOKEN_IDENTIFIER . DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON type_no_str DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON
   13     | KEYWORD_CONST TOKEN_IDENTIFIER . DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON KEYWORD_STRING DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON
   49 matrix: . DELIMITER_L_BRACKET DELIMITER_R_BRACKET
   50       | . DELIMITER_L_BRACKET TOKEN_POSITIVE_INT DELIMITER_R_BRACKET

    DELIMITER_L_BRACKET  shift, and go to state 14
    DELIMITER_ASSIGN     shift, and go to state 15

    matrix  go to state 16


State 8

    8 main: KEYWORD_CONST KEYWORD_START . DELIMITER_ASSIGN DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS DELIMITER_COLON KEYWORD_INT DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines pr_end

    DELIMITER_ASSIGN  shift, and go to state 17


State 9

   39 let_ids: TOKEN_IDENTIFIER . DELIMITER_COLON
   40        | TOKEN_IDENTIFIER . matrix DELIMITER_COLON
   41        | TOKEN_IDENTIFIER . DELIMITER_ASSIGN simple_expresion DELIMITER_COLON
   42        | TOKEN_IDENTIFIER . DELIMITER_COMMA let_ids
   43        | TOKEN_IDENTIFIER . matrix DELIMITER_COMMA let_ids
   44        | TOKEN_IDENTIFIER . DELIMITER_ASSIGN simple_expresion DELIMITER_COMMA let_ids
   45 let_str_ids: TOKEN_IDENTIFIER . matrix DELIMITER_COLON
   46            | TOKEN_IDENTIFIER . matrix DELIMITER_ASSIGN str_expr DELIMITER_COLON
   47            | TOKEN_IDENTIFIER . matrix DELIMITER_COMMA let_str_ids
   48            | TOKEN_IDENTIFIER . matrix DELIMITER_ASSIGN str_expr DELIMITER_COMMA let_str_ids
   49 matrix: . DELIMITER_L_BRACKET DELIMITER_R_BRACKET
   50       | . DELIMITER_L_BRACKET TOKEN_POSITIVE_INT DELIMITER_R_BRACKET

    DELIMITER_COMMA      shift, and go to state 18
    DELIMITER_L_BRACKET  shift, and go to state 14
    DELIMITER_COLON      shift, and go to state 19
    DELIMITER_ASSIGN     shift, and go to state 20

    matrix  go to state 21


State 10

    3 start_decl: KEYWORD_LET let_ids . type_no_str DELIMITER_SEMICOLON start_decl
   56 type_no_str: . KEYWORD_INT
   57            | . KEYWORD_REAL
   58            | . KEYWORD_BOOL
   59            | . DELIMITER_L_BRACKET DELIMITER_R_BRACKET KEYWORD_INT
   60            | . DELIMITER_L_BRACKET DELIMITER_R_BRACKET KEYWORD_REAL
   61            | . DELIMITER_L_BRACKET DELIMITER_R_BRACKET KEYWORD_BOOL
   62            | . DELIMITER_L_BRACKET DELIMITER_R_BRACKET KEYWORD_STRING

    KEYWORD_INT          shift, and go to state 22
    KEYWORD_REAL         shift, and go to state 23
    KEYWORD_BOOL         shift, and go to state 24
    DELIMITER_L_BRACKET  shift, and go to state 25

    type_no_str  go to state 26


State 11

    4 start_decl: KEYWORD_LET let_str_ids . KEYWORD_STRING DELIMITER_SEMICOLON start_decl

    KEYWORD_STRING  shift, and go to state 27


State 12

    0 $accept: program $end .

    $default  accept


State 13

    7 start_decl: func start_decl .

    $default  reduce using rule 7 (start_decl)


State 14

   49 matrix: DELIMITER_L_BRACKET . DELIMITER_R_BRACKET
   50       | DELIMITER_L_BRACKET . TOKEN_POSITIVE_INT DELIMITER_R_BRACKET

    TOKEN_POSITIVE_INT   shift, and go to state 28
    DELIMITER_R_BRACKET  shift, and go to state 29


State 15

    5 start_decl: KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN . simple_expresion DELIMITER_COLON type_no_str DELIMITER_SEMICOLON start_decl
   12 func: KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN . DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON type_no_str DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON
   13     | KEYWORD_CONST TOKEN_IDENTIFIER DELIMITER_ASSIGN . DELIMITER_L_PARENTHESIS func_vars DELIMITER_COLON KEYWORD_STRING DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines DELIMITER_R_BRACE DELIMITER_SEMICOLON
   63 simple_expresion: . TOKEN_POSITIVE_INT
   64                 | . TOKEN_POSITIVE_REAL
   65                 | . read
   66                 | . TOKEN_IDENTIFIER ident_matrix
   67                 | . KEYWORD_TRUE
   68                 | . KEYWORD_FALSE
   69                 | . DELIMITER_L_PARENTHESIS simple_expresion DELIMITER_R_PARENTHESIS
   70                 | . TOKEN_IDENTIFIER DELIMITER_L_PARENTHESIS func_call_ids DELIMITER_R_PARENTHESIS
   71                 | . OPERATOR_PLUS simple_expresion
   72                 | . OPERATOR_MINUS simple_expresion
   73                 | . KEYWORD_NOT simple_expresion
   74                 | . simple_expresion OPERATOR_PLUS simple_expresion
   75                 | . simple_expresion OPERATOR_MINUS simple_expresion
   76                 | . simple_expresion OPERATOR_MULTIPLY simple_expresion
   77                 | . simple_expresion OPERATOR_DIVINE simple_expresion
   78                 | . simple_expresion OPERATOR_MODULATE simple_expresion
   79                 | . simple_expresion OPERATOR_EQUAL simple_expresion
   80                 | . simple_expresion OPERATOR_NOT_EQUAL simple_expresion
   81                 | . simple_expresion OPERATOR_LESS simple_expresion
   82                 | . simple_expresion OPERATOR_LESS_OR_EQUAL simple_expresion
   83                 | . simple_expresion KEYWORD_AND simple_expresion
   84                 | . simple_expresion KEYWORD_OR simple_expresion
   87 read: . READ_INTEGER DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS
   88     | . READ_REAL DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS

    TOKEN_POSITIVE_INT       shift, and go to state 30
    TOKEN_POSITIVE_REAL      shift, and go to state 31
    TOKEN_IDENTIFIER         shift, and go to state 32
    KEYWORD_TRUE             shift, and go to state 33
    KEYWORD_FALSE            shift, and go to state 34
    KEYWORD_NOT              shift, and go to state 35
    OPERATOR_PLUS            shift, and go to state 36
    OPERATOR_MINUS           shift, and go to state 37
    DELIMITER_L_PARENTHESIS  shift, and go to state 38
    READ_INTEGER             shift, and go to state 39
    READ_REAL                shift, and go to state 40

    simple_expresion  go to state 41
    read              go to state 42


State 16

    6 start_decl: KEYWORD_CONST TOKEN_IDENTIFIER matrix . DELIMITER_ASSIGN str_expr DELIMITER_COLON KEYWORD_STRING DELIMITER_SEMICOLON start_decl

    DELIMITER_ASSIGN  shift, and go to state 43


State 17

    8 main: KEYWORD_CONST KEYWORD_START DELIMITER_ASSIGN . DELIMITER_L_PARENTHESIS DELIMITER_R_PARENTHESIS DELIMITER_COLON KEYWORD_INT DELIMITER_RETURN_ASSIGN DELIMITER_L_BRACE lines pr_end

    DELIMITER_L_PARENTHESIS  shift, and go to state 44


State 18

   39 let_ids: . TOKEN_IDENTIFIER DELIMITER_COLON
   40        | . TOKEN_IDENTIFIER matrix DELIMITER_COLON
   41        | . TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COLON
   42        | . TOKEN_IDENTIFIER DELIMITER_COMMA let_ids
   42        | TOKEN_IDENTIFIER DELIMITER_COMMA . let_ids
   43        | . TOKEN_IDENTIFIER matrix DELIMITER_COMMA let_ids
   44        | . TOKEN_IDENTIFIER DELIMITER_ASSIGN simple_expresion DELIMITER_COMMA let_ids

    TOKEN_IDENTIFIER  shift, and go to state 45

    let_ids  go to state 46


State 19

   39 let_ids: TOKEN_IDENTIFIER DELIMITER_COLON .

    $default  reduce using rule 39 (let_ids)


State 20
